2008-07-10  Joseph Myers  <joseph@codesourcery.com>

	* config.gcc (arm-*-coff*, armel-*-coff*, h8300-*-*,
	i[34567]86-*-aout*, i[34567]86-*-coff*, m68k-*-aout*,
	m68k-*-coff*, sh-*-*, mips-sgi-irix[56]*, pdp11-*-bsd,
	rs6000-ibm-aix4.[12]*, powerpc-ibm-aix4.[12]*): Deprecate targets,
	excluding more specific h8300-*-* and sh-*-* targets.

2008-07-10  Daniel Berlin  <dberlin@dberlin.org>

	* tree-ssa-pre.c (create_expression_by_pieces): Add fold_convert
	calls.
	(eliminate): Ditto.
	(execute_pre): Call loop_optimizer_finalize in early exit.

2008-07-10  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/36790
	* omp-low.c (lower_omp_2): If task_shared_vars, test all DECL_P
	uids in the bitmap, not just VAR_DECL uids.

	PR rtl-optimization/36419
	* combine-stack-adj.c (adjust_frame_related_expr): New function.
	(combine_stack_adjustments_for_block): Call it if needed.  Delete
	correct insn.
	* dwarf2out.c (dwarf2out_frame_debug_expr): Adjust
	DW_CFA_GNU_args_size if CSA pass merged some adjustments into
	prologue sp adjustment.

2008-07-10  Peter Maydell  <pmaydell@chiark.greenend.org.uk>

	PR other/28322
	* opts.c (print_ignored_options): Report postponed diagnostics for
	unknown -Wno-* options as warnings, not errors.
	(postpone_unknown_option_error): Renamed to...
	(postpone_unknown_option_warning): ... this.

2008-07-09  Doug Kwan  <dougkwan@google.com>

	Revert:
	2008-07-08  Doug Kwan  <dougkwan@google.com>

	* config/arm/arm.opt (mandroid): New option.
	* config/arm/bpabi.h (ANDROID_LINK_SPEC): New macro.
	(LINK_SPEC): Enable Android specific behaviour when -mandroid is used.
	(CC1_SPEC): Same.
	(CC1PLUS_SPEC): Same.
	(LIB_SPEC): Same.
	(STARTFILE_SPEC): Same.
	(ENDFILE_SPEC): Same.
	(TARGET_BPABI_CPP_BUILTINS): Define __ANDROID__ when -mandroid is
	used.

2008-07-09  Richard Sandiford  <rdsandiford@googlemail.com>

	PR target/35802
	* config/mips/mips.h (reg_class): Remove V1_REG.
	(REG_CLASS_NAMES, REG_CLASS_CONTENTS): Update accordingly.